# emailserver

./: .env  Cargo.toml
migrations/2022-05-20-001416_Users/: down.sql  up.sql
migrations/2022-05-21-191348_microbitDB/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  newDevice.sql  newowner.rs  schema.rs
