[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
config = "0.13.1"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
rust-argon2 = "1.0"
rand = "0.8.5"